<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menufragment.menu"
    android:orientation="vertical"

    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:paddingBottom="50dp">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:orientation="vertical"
     android:paddingTop="70dp"
     android:layout_marginHorizontal="10dp"
     android:background="@drawable/burger_menu_gb"
     >
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/setting_Btn"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="@drawable/nav_menu_button_orange"
         android:text="@string/settings"
         android:textAllCaps="false"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/white"
         android:textStyle="bold"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="@drawable/nav_menu_button_orange"
         android:text="@string/profile"
         android:textAllCaps="false"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/white"
         android:textStyle="bold"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="@drawable/nav_menu_button_orange"
         android:text="@string/my_account"
         android:textAllCaps="false"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/white"
         android:textStyle="bold"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="@drawable/nav_menu_button_orange"
         android:text="@string/statistics"
         android:textAllCaps="false"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/white"
         android:textStyle="bold"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="@drawable/nav_menu_button_orange"
         android:text="@string/news_amp_events"
         android:textAllCaps="false"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/white"
         android:textStyle="bold"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="@drawable/nav_menu_button_orange"
         android:text="@string/feedback"
         android:textAllCaps="false"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/white"
         android:textStyle="bold"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="@drawable/nav_menu_button_orange"
         android:text="@string/help_amp_guides"
         android:textAllCaps="false"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/white"
         android:textStyle="bold"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/nav_menu_button_orange"
         android:gravity="center"
         android:text="@string/sign_out"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold" />




 </LinearLayout>



</LinearLayout>