<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menufragment.MyAccountFragment"
    android:orientation="vertical"
    android:background="@drawable/pexels_prashant_gautam_3783385__1___1_">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <androidx.constraintlayout.widget.ConstraintLayout
 android:layout_marginTop="10dp"

            android:layout_width="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_s_new_amp_coming_here"
                style="@style/myTextStyle"
                android:layout_marginTop="-10dp"
                app:layout_constraintTop_toBottomOf="@+id/news_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:importantForAutofill="no" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/news_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/news_event_title"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:paddingHorizontal="15dp"

            android:layout_marginHorizontal="30dp"
            style="@style/myEditTextStyle"
            android:hint="@string/danthedestroyer"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingHorizontal="15dp"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="30dp"
            style="@style/myEditTextStyle"
            android:hint="@string/_07_06_2023"
            tools:ignore="Autofill"
            android:inputType="date" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingHorizontal="15dp"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/hidePassword"
            android:inputType="text"
            style="@style/myEditTextStyle"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingHorizontal="15dp"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/_2314_4324_0989"
            tools:ignore="Autofill,TextFields"
            style="@style/myEditTextStyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingHorizontal="15dp"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/ankitlogic_gmail_com"
            style="@style/myEditTextStyle"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription"
            style="@style/myTextStyle"
            android:layout_marginTop="20dp"
   android:paddingVertical="7dp"
            android:background="@drawable/transparentbackground1"
            android:importantForAutofill="no"
       />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
           android:layout_marginStart="30dp"
            android:layout_gravity="end"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="2dp"
                android:src="@drawable/quizzle_shop_viq_item" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:background="@drawable/green_button_background"
                android:text="@string/active"
                style="@style/myTextStyle"
                android:textAllCaps="false" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>