<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
android:layout_marginBottom="15dp"
    android:layout_marginEnd="30dp"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
android:layout_weight="1"
        android:layout_height="match_parent"

        android:layout_gravity="center"
        android:gravity="center_vertical|end"
android:paddingEnd="10dp"
        android:orientation="vertical"
        android:background="@drawable/questinandansbackground"
        >
        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answered"
            android:textColor="@color/white"
            android:textSize="18sp"
            />



    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            style="@style/myTextStyle"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/_132"
            android:background="@drawable/green_button_small"
            />



</LinearLayout>