<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pexels_prashant_gautam_3783385__1___1_"
    android:orientation="vertical"

    tools:context=".menufragment.Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/myTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="10dp"
                android:importantForAutofill="no"
                android:text="@string/what_s_new_amp_coming_here"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_image" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/news_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/profile_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/quizzler_profile_image_background"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/download__25_" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="130dp"

                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="@drawable/quizzler_profile_image_background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/myTextStyle1"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:text="@string/level"
                    android:textColor="#EFA451"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textColor="#A60222D3"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            style="@style/myEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/danthedestroyer_"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            style="@style/myTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/quizzling"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/quizzler_profile_image_background"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/chosen_quizzling_footer_animation" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"

                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="@drawable/quizzler_profile_image_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/level_"
                    android:textColor="#EFA451"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_gravity="center|top"
                    android:gravity="center|top"
                    android:paddingBottom="10dp"
                    android:text="@string/_5"
                    android:textSize="55sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <EditText
            style="@style/myEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="30dp"
            android:text="@string/thelittledeatroyer"
            tools:ignore="Autofill" />


    </LinearLayout>

</ScrollView>