<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menufragment.Settings"
    android:orientation="vertical"
    android:background="@drawable/pexels_prashant_gautam_3783385__1___1_"
  >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_s_new_amp_coming_here"
            style="@style/myTextStyle"
            android:layout_marginTop="-10dp"
            app:layout_constraintTop_toBottomOf="@+id/news_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/news_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/news_event_title"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
           style="@style/myTextStyle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <SeekBar
            android:id="@+id/sfx_seekbar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
          android:layout_gravity="center"
            android:progress="25"
            android:progressDrawable="@drawable/custom_seekbar_"
            android:thumb="@drawable/slider_noggin"
            android:max="50"/>


        <Switch
            android:id="@+id/musicSwitchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"

            android:thumb="@drawable/switch_thumb_selecter"
            android:track="@drawable/switch_track_color"
            tools:ignore="UseSwitchCompatOrMaterialXml" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sfx"
            style="@style/myTextStyle1"
android:layout_marginEnd="23dp"
            android:layout_gravity="center"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <SeekBar
            android:id="@+id/sfx_seekbar1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            android:progress="15"
            android:progressDrawable="@drawable/custom_seekbar_"
            android:thumb="@drawable/slider_noggin"
            android:max="50"/>


        <Switch
            android:id="@+id/switchBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:checked="true"

            android:gravity="center"

            android:thumb="@drawable/switch_thumb_selecter"
          android:track="@drawable/switch_track_color"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            style="@style/myTextStyle"
android:layout_marginVertical="5dp"
            android:layout_marginTop="35dp"
            android:paddingVertical="5dp"

            />


    <Switch
        android:id="@+id/notification_switch"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:checked="false"

        android:layout_gravity="center"
        android:layout_margin="5dp"

        android:gravity="center"
        app:switchMinWidth="102dp"
        android:thumb="@drawable/switch_thumb_selecter"
        android:track="@drawable/switch_track_color"
        tools:ignore="UseSwitchCompatOrMaterialXml" />




    <TextView
        style="@style/myTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/save_settings"

        />



    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/ok"
      style="@style/myTextStyle1"
        android:background="@drawable/ok_button_background"/>

</LinearLayout>